# config/routes/api.rb
@@ -5,6 +5,7 @@
 # ==============================================================================
 namespace :api do
   namespace :v1 do
+    get 'me', to: 'users#me'
     resources :contents, only: [:index, :show]
   end
 end
